--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,17 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        android:theme="@style/GenerateActivityTheme">
+        <activity android:name=".MainActivity" />
+        <activity android:name=".ui.GameGoBackModeActivity" />
+        <activity android:name=".ui.GameModeChoiceActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".ui.GameSettingsActivity"
+            android:theme="@style/SettingActivityTheme">
         </activity>
     </application>
 
