--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,27 +4,23 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/game_name"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/GenerateActivityTheme">
         <activity
             android:name=".ui.GameModeChoiceActivity"
             android:clearTaskOnLaunch="true"
-            android:launchMode="singleTask">
-        </activity>
+            android:launchMode="singleTask"></activity>
         <activity
             android:name=".MainActivity"
-            android:clearTaskOnLaunch="true">
-
-        </activity>
+            android:clearTaskOnLaunch="true"></activity>
         <activity
             android:name=".ui.GameSettingsActivity"
-            android:theme="@style/SettingActivityTheme"></activity>
-        <activity android:name=".ui.StartActivity">
+            android:theme="@style/SettingActivityTheme" />
+        <activity android:name=".ui.start.GameStartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
