--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jinwei.tvgame2048">
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/game_name"
+        android:banner="@mipmap/game_name"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/GenerateActivityTheme">
